@@ -1,3 +1,7 @@
+2014-04-22
+
+	* makewin32.sh: save build log.
+
 2014-04-21
 
 	* configure.ac: renamed from configure.in.
